# dt-fetcher

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  container.yml
crates/dt-api/: Cargo.toml  README.md
crates/dt-api/src/: lib.rs
crates/dt-api/src/models/: master_data.rs  mod.rs  store.rs  summary.rs
crates/dt-fetcher/: Cargo.toml
crates/dt-fetcher/src/: account.rs  auth.rs  main.rs  store.rs
crates/dt-fetcher/src/auth/: endpoints.rs  manager.rs  mod.rs  storage.rs
crates/dt-fetcher/src/server/: mod.rs  store.rs
