[package]
name = "dt-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = {version = "0.4.31", features = ["serde"]}
reqwest = {version = "0.11.22", features = ["json"]}
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
serde_with = {version = "3.4.0", features = ["chrono"]}
