[package]
name = "dt-fetcher"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.7.2"
chrono = "0.4.31"
clap = {version = "4.4.11", features = ["derive"]}
dt-api = {path = "../dt-api"}
figment = {version = "0.10.12", features = ["json"]}
futures = "0.3.29"
futures-util = "0.3.29"
reqwest = "0.11.22"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.111"
sled = "0.34.7"
tokio = {version = "1.35.0", features = ["full"]}
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-journald = "0.3.0"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
uuid = { version = "1.6.1", features = ["v4", "serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
libsystemd = "0.7.0"
